--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 		</div><input checked id="mobile-nav-toggle" type="checkbox">
 		<div class="mobile-links element-hidden" id="mobile-links" style="height:2404px;">
 			<ul class="mobile-menu">
-				<li class="expanded menu-item"><a class="menu-link" href="/environmental-topics" tabindex="-1" title="View links to the most popular pages for each of EPA?s top environmental topics.">Environmental Topics</a></li>
-				<li class="menu-item"><a class="menu-link" href="/laws-regulations" tabindex="-1" title="View links to regulatory information by topic and sector, and to top pages about environmental laws, regulations, policies, compliance, and enforcement.">Laws &amp; Regulations</a></li>
-				<li class="expanded menu-item"><a class="menu-link" href="/aboutepa" tabindex="-1" title="Learn more about our mission, organization, and locations.">About EPA</a></li>
+				<li class="expanded menu-item"><a class="menu-link" href="https://www.epa.gov/environmental-topics" tabindex="-1" title="View links to the most popular pages for each of EPA?s top environmental topics.">Environmental Topics</a></li>
+				<li class="menu-item"><a class="menu-link" href="https://www.epa.gov/laws-regulations" tabindex="-1" title="View links to regulatory information by topic and sector, and to top pages about environmental laws, regulations, policies, compliance, and enforcement.">Laws &amp; Regulations</a></li>
+				<li class="expanded menu-item"><a class="menu-link" href="https://www.epa.gov/aboutepa" tabindex="-1" title="Learn more about our mission, organization, and locations.">About EPA</a></li>
 			</ul>
 		</div>
 	</div>
