--- a/index.html
+++ b/index.html
@@ -187,5 +187,6 @@
 			</div>
 		</div>
 	</footer>
+  <script src="https://www.epa.gov/sites/all/modules/custom/epa_core/js/alert.js"></script>
 </body>
 </html>
