Absolute URLs required

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta name="DC.creator" content="" />
 	<title>Standalone Template for Applications | US EPA</title>
   <!--googleoff: all-->
-<link type="text/css" rel="stylesheet" href="css/core/style.css" media="all" />
+  <link type="text/css" rel="stylesheet" href="css/core/style.css" media="all" />
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({"gtm.start":new Date().getTime(),event:"gtm.js"});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!="dataLayer"?"&l="+l:"";j.async=true;j.src="//www.googletagmanager.com/gtm.js?id="+i+dl;f.parentNode.insertBefore(j,f);})(window,document,"script","dataLayer","GTM-L8ZB");</script>
   <!-- End Google Tag Manager -->  
@@ -39,7 +39,7 @@
 	<header class="masthead clearfix" role="banner">
 		<img alt="" class="site-logo" src="https://www.epa.gov/sites/all/themes/epa/logo.png">
 		<div class="site-name-and-slogan">
-			<h1 class="site-name"><a href="/" rel="home" title="Go to the home page"><span>US EPA</span></a></h1>
+			<h1 class="site-name"><a href="https://www.epa.gov/" rel="home" title="Go to the home page"><span>US EPA</span></a></h1>
 			<div class="site-slogan">
 				United States Environmental Protection Agency
 			</div>
@@ -65,11 +65,11 @@
 			<h2 class="element-invisible">Main menu</h2>
 			<ul class="menu" role="menu">
 				<li class="expanded active-trail menu-item" role="presentation">
-					<a class="active-trail menu-link" href="/environmental-topics" role="menuitem" title="View links to the most popular pages for each of EPA?s top environmental topics.">Environmental Topics</a></li>
+					<a class="active-trail menu-link" href="https://www.epa.gov/environmental-topics" role="menuitem" title="View links to the most popular pages for each of EPA?s top environmental topics.">Environmental Topics</a></li>
 				<li class="menu-item" role="presentation">
-					<a class="menu-link" href="/laws-regulations" role="menuitem" title="View links to regulatory information by topic and sector, and to top pages about environmental laws, regulations, policies, compliance, and enforcement.">Laws &amp; Regulations</a></li>
+					<a class="menu-link" href="https://www.epa.gov/laws-regulations" role="menuitem" title="View links to regulatory information by topic and sector, and to top pages about environmental laws, regulations, policies, compliance, and enforcement.">Laws &amp; Regulations</a></li>
 				<li class="expanded menu-item" role="presentation">
-					<a class="menu-link" href="/aboutepa" role="menuitem" title="Learn more about our mission, organization, and locations.">About EPA</a></li>
+					<a class="menu-link" href="https://www.epa.gov/aboutepa" role="menuitem" title="Learn more about our mission, organization, and locations.">About EPA</a></li>
 			</ul>
 		</div>
 	</nav>
