Removed IE > 7,8 code. Removed RDF stuff.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML+RDFa 1.1//EN">
-<!--[if IEMobile 7]><html class="iem7 no-js" lang="en" dir="ltr"><![endif]-->
-<!--[if lt IE 7]><html class="lt-ie9 lt-ie8 lt-ie7 no-js" lang="en" dir="ltr"><![endif]-->
-<!--[if (IE 7)&(!IEMobile)]><html class="lt-ie9 lt-ie8 no-js" lang="en" dir="ltr"><![endif]-->
-<!--[if IE 8]><html class="lt-ie9 no-js" lang="en" dir="ltr"><![endif]-->
-<!--[if (gt IE 8)|(gt IEMobile 7)]><!--><html class="js not-oldie" lang="en" dir="ltr" version="HTML+RDFa 1.1"><!--<![endif]-->
-<head profile="http://www.w3.org/1999/xhtml/vocab">
+<!DOCTYPE html>
+<html class="js" lang="en" dir="ltr">
+<head>
   <meta charset="utf-8" />
   <meta http-equiv="ImageToolbar" content="false" />
   <meta http-equiv="cleartype" content="on" />
@@ -27,15 +23,17 @@
   <meta name="DC.date.modified" content="" />
   <meta name="DC.date.reviewed" content="" />
   <meta name="DC.creator" content="" />
-	<title>Standalone Template for Applications | US EPA</title>
+  <title>Standalone Template for Applications | US EPA</title>
   <!--googleoff: all-->
-  <link type="text/css" rel="stylesheet" href="css/core/style.css" media="all" />
+  <link rel="stylesheet" href="css/core/style.css" media="all" />
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({"gtm.start":new Date().getTime(),event:"gtm.js"});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!="dataLayer"?"&l="+l:"";j.async=true;j.src="//www.googletagmanager.com/gtm.js?id="+i+dl;f.parentNode.insertBefore(j,f);})(window,document,"script","dataLayer","GTM-L8ZB");</script>
   <!-- End Google Tag Manager -->  
 </head>
 <body class="html">
+  <!-- Google Tag Manager -->
   <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-L8ZB" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager -->  
 	<header class="masthead clearfix" role="banner">
 		<img alt="" class="site-logo" src="https://www.epa.gov/sites/all/themes/epa/logo.png">
 		<div class="site-name-and-slogan">
