--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 		<img alt="" class="site-logo" src="https://www.epa.gov/sites/all/themes/epa/logo.png">
 		<div class="site-name-and-slogan">
 			<h1 class="site-name"><a href="https://www.epa.gov/" rel="home" title="Go to the home page"><span>US EPA</span></a></h1>
-			<div class="site-slogan">
-				United States Environmental Protection Agency
-			</div>
+			<div class="site-slogan">United States Environmental Protection Agency</div>
 		</div>
 		<div class="region-header">
 			<div class="block-epa-core-gsa-epa-search" id="block-epa-core-gsa-epa-search">
@@ -62,19 +60,17 @@
 		<div class="nav__inner">
 			<h2 class="element-invisible">Main menu</h2>
 			<ul class="menu" role="menu">
-				<li class="expanded active-trail menu-item" role="presentation">
-					<a class="active-trail menu-link" href="https://www.epa.gov/environmental-topics" role="menuitem" title="View links to the most popular pages for each of EPA?s top environmental topics.">Environmental Topics</a></li>
-				<li class="menu-item" role="presentation">
-					<a class="menu-link" href="https://www.epa.gov/laws-regulations" role="menuitem" title="View links to regulatory information by topic and sector, and to top pages about environmental laws, regulations, policies, compliance, and enforcement.">Laws &amp; Regulations</a></li>
-				<li class="expanded menu-item" role="presentation">
-					<a class="menu-link" href="https://www.epa.gov/aboutepa" role="menuitem" title="Learn more about our mission, organization, and locations.">About EPA</a></li>
+				<li class="expanded active-trail menu-item" role="presentation"><a class="active-trail menu-link" href="https://www.epa.gov/environmental-topics" role="menuitem" title="View links to the most popular pages for each of EPA?s top environmental topics.">Environmental Topics</a></li>
+				<li class="menu-item" role="presentation"><a class="menu-link" href="https://www.epa.gov/laws-regulations" role="menuitem" title="View links to regulatory information by topic and sector, and to top pages about environmental laws, regulations, policies, compliance, and enforcement.">Laws &amp; Regulations</a></li>
+				<li class="expanded menu-item" role="presentation"><a class="menu-link" href="https://www.epa.gov/aboutepa" role="menuitem" title="Learn more about our mission, organization, and locations.">About EPA</a></li>
 			</ul>
 		</div>
 	</nav>
 	<div class="mobile-nav" id="mobile-nav">
 		<div class="mobile-bar clearfix">
 			<label class="menu-button" for="mobile-nav-toggle">Menu</label>
-		</div><input checked id="mobile-nav-toggle" type="checkbox">
+		</div>
+    <input checked id="mobile-nav-toggle" type="checkbox">
 		<div class="mobile-links element-hidden" id="mobile-links" style="height:2404px;">
 			<ul class="mobile-menu">
 				<li class="expanded menu-item"><a class="menu-link" href="https://www.epa.gov/environmental-topics" tabindex="-1" title="View links to the most popular pages for each of EPA?s top environmental topics.">Environmental Topics</a></li>
