Updated footer links; removed extraneous elements from search

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 			<div class="block-epa-core-gsa-epa-search" id="block-epa-core-gsa-epa-search">
 				<form action="https://search.epa.gov/epasearch/epasearch" class="epa-search" method="get">
 					<label class="element-hidden" for="search-box">Search</label>
-          <input autocomplete="off" class="form-text ui-autocomplete-input" id="search-box" name="querytext" placeholder="Search EPA.gov" value="">
-          <span aria-live="polite" class="ui-helper-hidden-accessible" role="status"></span>
+          <input class="form-text" id="search-box" name="querytext" placeholder="Search EPA.gov" value="">
           <button class="epa-search-button" id="search-button" title="Search" type="submit">Search</button>
           <input name="areaname" type="hidden" value="">
           <input name="areacontacts" type="hidden" value="">
@@ -118,7 +117,7 @@
 							</div>
 							<ul class="menu">
 								<li><a href="https://www.epa.gov/accessibility">Accessibility</a></li>
-								<li><a href="https://www.epa.gov/aboutepa/administrator-gina-mccarthy">EPA Administrator</a></li>
+								<li><a href="https://www.epa.gov/aboutepa/epas-administrator">EPA Administrator</a></li>
 								<li><a href="https://www.epa.gov/planandbudget">Budget &amp; Performance</a></li>
 								<li><a href="https://www.epa.gov/contracts">Contracting</a></li>
 								<li><a href="https://www.epa.gov/home/grants-and-other-funding-opportunities">Grants</a></li>
