Updated title text for main menu, removed extraneous classes

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 		<div class="nav__inner">
 			<h2 class="element-invisible">Main menu</h2>
 			<ul class="menu" role="menu">
-				<li class="expanded active-trail menu-item" role="presentation"><a class="active-trail menu-link" href="https://www.epa.gov/environmental-topics" role="menuitem" title="View links to the most popular pages for each of EPA?s top environmental topics.">Environmental Topics</a></li>
-				<li class="menu-item" role="presentation"><a class="menu-link" href="https://www.epa.gov/laws-regulations" role="menuitem" title="View links to regulatory information by topic and sector, and to top pages about environmental laws, regulations, policies, compliance, and enforcement.">Laws &amp; Regulations</a></li>
-				<li class="expanded menu-item" role="presentation"><a class="menu-link" href="https://www.epa.gov/aboutepa" role="menuitem" title="Learn more about our mission, organization, and locations.">About EPA</a></li>
+				<li class="menu-item" role="presentation"><a class="menu-link" href="https://www.epa.gov/environmental-topics" role="menuitem" title="Learn about Environmental Topics that EPA covers.">Environmental Topics</a></li>
+				<li class="menu-item" role="presentation"><a class="menu-link" href="https://www.epa.gov/laws-regulations" role="menuitem" title="Laws written by Congress provide the authority for EPA to write regulations. Regulations explain the technical, operational, and legal details necessary to implement laws.">Laws &amp; Regulations</a></li>
+				<li class="menu-item" role="presentation"><a class="menu-link" href="https://www.epa.gov/aboutepa" role="menuitem" title="Learn more about our mission and what we do, how we are organized, and our history.">About EPA</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -72,9 +72,9 @@
     <input checked id="mobile-nav-toggle" type="checkbox">
 		<div class="mobile-links element-hidden" id="mobile-links" style="height:2404px;">
 			<ul class="mobile-menu">
-				<li class="expanded menu-item"><a class="menu-link" href="https://www.epa.gov/environmental-topics" tabindex="-1" title="View links to the most popular pages for each of EPA?s top environmental topics.">Environmental Topics</a></li>
-				<li class="menu-item"><a class="menu-link" href="https://www.epa.gov/laws-regulations" tabindex="-1" title="View links to regulatory information by topic and sector, and to top pages about environmental laws, regulations, policies, compliance, and enforcement.">Laws &amp; Regulations</a></li>
-				<li class="expanded menu-item"><a class="menu-link" href="https://www.epa.gov/aboutepa" tabindex="-1" title="Learn more about our mission, organization, and locations.">About EPA</a></li>
+				<li class="menu-item" role="presentation"><a class="menu-link" href="https://www.epa.gov/environmental-topics" role="menuitem" title="Learn about Environmental Topics that EPA covers.">Environmental Topics</a></li>
+				<li class="menu-item" role="presentation"><a class="menu-link" href="https://www.epa.gov/laws-regulations" role="menuitem" title="Laws written by Congress provide the authority for EPA to write regulations. Regulations explain the technical, operational, and legal details necessary to implement laws.">Laws &amp; Regulations</a></li>
+				<li class="menu-item" role="presentation"><a class="menu-link" href="https://www.epa.gov/aboutepa" role="menuitem" title="Learn more about our mission and what we do, how we are organized, and our history.">About EPA</a></li>
 			</ul>
 		</div>
 	</div>
