Updated reference of CSS file to point to https://www.epa.gov/sites/all/libraries/standalone/

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta name="DC.creator" content="" />
   <title>Standalone Template for Applications | US EPA</title>
   <!--googleoff: all-->
-  <link rel="stylesheet" href="css/core/style.css" media="all" />
+  <link rel="stylesheet" href="https://www.epa.gov/sites/all/libraries/standalone/css/core/style.css" media="all" />
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({"gtm.start":new Date().getTime(),event:"gtm.js"});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!="dataLayer"?"&l="+l:"";j.async=true;j.src="//www.googletagmanager.com/gtm.js?id="+i+dl;f.parentNode.insertBefore(j,f);})(window,document,"script","dataLayer","GTM-L8ZB");</script>
   <!-- End Google Tag Manager -->  
@@ -84,7 +84,7 @@
 				<div class="view view-revision-hublinks view-id-revision_hublinks">
 					<span class="related-info"><strong>Related Topics:</strong></span>
 					<ul class="menu pipeline">
-						<li class="menu-item"><a href="/environmental-topics">Environmental Topics</a></li>
+						<li class="menu-item"><a href="{HOME PAGE LINK}">Insert your Home Page Link here</a></li>
 					</ul>
 				</div>
 			</div>
@@ -96,11 +96,11 @@
 		</div>
     <div class="main-column clearfix">
       <!--googleon:all-->
-      <h1  class="page-title">Drupal WebCMS Release Notes</h1>
+      <h1  class="page-title">Page Title</h1>
       <div class="panel-pane pane-node-content">
         <div class="pane-content">
           <div class="node node-page clearfix view-mode-full">
-            <p>Below are the "Release Notes" for Drupal WebCMS code updates. We update the WebCMS at least once a quarter with bug fixes and enhancements. If you have a feature you would like to see, please see the <a href="/drupaltraining/forms/featureenhancement-suggestions-drupal-webcms">Drupal WebCMS Feature Request page</a>.</p>
+            <p>Please adjust various things for your application. Note that all links in this Standalone template must be absolute to www.epa.gov.</p>
           </div>
         </div>
       </div>
