Adding back in the skip-links
NOT cool to take that out.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
   <!-- Google Tag Manager -->
   <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-L8ZB" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager -->  
+  <div class="skip-links">
+    <a href="#main-content" class="skip-link element-invisible element-focusable">Jump to main content</a>
+  </div>
 	<header class="masthead clearfix" role="banner">
 		<img alt="" class="site-logo" src="https://www.epa.gov/sites/all/themes/epa/logo.png">
 		<div class="site-name-and-slogan">
