New search engine and endpoint
search.epa.gov/epasearch instead of search.epa.gov/epasearch/epasearch

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		</div>
 		<div class="region-header">
 			<div class="block-epa-core-gsa-epa-search" id="block-epa-core-gsa-epa-search">
-				<form action="https://search.epa.gov/epasearch/epasearch" class="epa-search" method="get">
+				<form action="https://search.epa.gov/epasearch" class="epa-search" method="get">
 					<label class="element-hidden" for="search-box">Search</label>
           <input class="form-text" id="search-box" name="querytext" placeholder="Search EPA.gov" value="">
           <button class="epa-search-button" id="search-button" title="Search" type="submit">Search</button>
