Updated footer links to say "EPA's"

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 								Ask.
 							</div>
 							<ul class="menu">
-								<li><a href="https://www.epa.gov/home/forms/contact-us">Contact Us</a></li>
+								<li><a href="https://www.epa.gov/home/forms/contact-us">Contact EPA</a></li>
 								<li><a href="https://www.epa.gov/home/epa-hotlines">Hotlines</a></li>
 								<li><a href="https://www.epa.gov/foia">FOIA Requests</a></li>
 								<li><a href="https://www.epa.gov/home/frequent-questions-specific-epa-programstopics">Frequent Questions</a></li>
@@ -159,11 +159,11 @@
 								Follow.
 							</div>
 							<ul class="social-menu">
-								<li><a class="menu-link social-facebook" href="https://www.facebook.com/EPA">Facebook</a></li>
-								<li><a class="menu-link social-twitter" href="https://twitter.com/epa">Twitter</a></li>
-								<li><a class="menu-link social-youtube" href="https://www.youtube.com/user/USEPAgov">YouTube</a></li>
-								<li><a class="menu-link social-flickr" href="https://www.flickr.com/photos/usepagov">Flickr</a></li>
-								<li><a class="menu-link social-instagram" href="https://www.instagram.com/epagov">Instagram</a></li>
+								<li><a class="menu-link social-facebook" href="https://www.facebook.com/EPA">EPA's Facebook</a></li>
+								<li><a class="menu-link social-twitter" href="https://twitter.com/epa">EPA's Twitter</a></li>
+								<li><a class="menu-link social-youtube" href="https://www.youtube.com/user/USEPAgov">EPA's YouTube</a></li>
+								<li><a class="menu-link social-flickr" href="https://www.flickr.com/photos/usepagov">EPA's Flickr</a></li>
+								<li><a class="menu-link social-instagram" href="https://www.instagram.com/epagov">EPA's Instagram</a></li>
 							</ul>
 							<p class="last-updated">Last updated on {Month day, YYYY}</p>
 						</div>
